--- a/frontend/src/app/layout/sales/add-sales/add-sales.component.scss
+++ b/frontend/src/app/layout/sales/add-sales/add-sales.component.scss
@@ -1,68 +1,65 @@
-.main-header {
+.main-header{
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
-
     .mat-dialog-title {
-        margin: 5px 0 0 0;
+        margin: 5px 0 0  0;
         display: block;
     }
-
     .mat-button {
         min-width: 40px;
         padding: 0 10px;
     }
 }
-
-.container {
-    .mat-form-field {
-        width: 100%;
+.item-form {
+    .box {
         display: flex;
-        flex-direction: column;
-    }
 
-    .flex {
-        display: flex;
-    }
-
-    .row-1 {
-        .width {
-            width: 172.5px;
-            margin-right: 20px;
+        mat-form-field {
+            margin: 0 15px 0 15px;
+            width: 160px;
         }
     }
 
-    .row-2 {
-        .width {
-            width: 128px;
-            margin-right: 20px;
+    .block {
+        display: table-caption;
+    }
+
+    .error {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+}
+
+.sales_details_table {
+    .box {
+        display: flex;
+
+        mat-form-field {
+            margin: 0 15px 0 15px;
+            width: 120px;
         }
     }
 
-
-
-    .input {
-        width: 100%;
-    }
-
-    .margin {
-        margin-right: 10px;
+    .add_button {
+        height: 35px;
+        width: 90px;
+        margin-top: 10px;
     }
 }
 
 table {
     width: 100%;
-}
 
-th {
-    color: rgb(0, 0, 0);
-    font-size: 16px;
-}
+    th {
+        color: rgb(0, 0, 0);
+        font-size: 16px;
+    }
 
-td {
-    color: rgb(73 70 70 / 87%);
+    td {
+        color: rgb(73 70 70 / 87%);
+    }
 }
-
 .bill-container {
     .flex {
 
@@ -95,5 +92,12 @@ td {
             margin-right: 10px;
         }
     }
-
+}
+.margin {
+    margin-right: 10px;
+}
+.loader {
+    bottom: 45px;
+    float: right;
+    right: 30px;
 }
