--- a/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.scss
+++ b/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.scss
@@ -17,7 +17,8 @@
 
         mat-form-field {
             margin: 0 15px 0 15px;
-            width: 160px;
+            width: 200px;
+            font-size: 14px;
         }
     }
 
@@ -38,6 +39,7 @@
         mat-form-field {
             margin: 0 15px 0 15px;
             width: 120px;
+            font-size: 14px;
         }
     }
 
