--- a/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
@@ -1,4 +1,5 @@
 <div>
+<div>
     <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
     <div class="header">
         <div>
@@ -15,13 +16,12 @@
                 <mat-label>Select Tier</mat-label>
                 <mat-select name="tier" [(ngModel)]="tireName">
                     <mat-option value="" (click)="toggleCreateButton()">All Tires</mat-option>
-                    <mat-option *ngFor="let tire of tires" [value]="tire.id" (click)="toggleCreateButton()">
+                    <mat-option *ngFor="let tire of tires" [value]="tire.code"  (click)="toggleCreateButton()">
                         {{tire.code}}
                     </mat-option>
                 </mat-select>
                 <mat-spinner class="selectTierLoader" *ngIf="selectTireLoader" diameter="25"></mat-spinner>
             </mat-form-field>
-
 
             <button color="primary" class="margin btn" mat-raised-button>
                 <mat-icon class="icon">cloud_download</mat-icon>
