--- a/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.html
@@ -244,15 +244,17 @@
                     <input matInput disable (keyup)="totalDueCount()" [(ngModel)]="shippingPayment"
                         value={{this.shippingPayment}} />
                 </mat-form-field>
-                <br>
-                <!-- <ng-container [formGroup]="toppings">
+            </div>
+              <div class="width
+              ">
+
 
                     <mat-form-field >
                         <mat-label>GST (₹) </mat-label>
-                        <input matInput disable (keyup)="totalDueCount()" [(ngModel)]="currentPayment"
-                        value={{this.currentPayment}} />
+                        <input matInput disable (keyup)="totalDueCount()" [(ngModel)]="gst"
+                        value={{this.gst}} />
                     </mat-form-field>
-                </ng-container> -->
+
             </div>
         </div>
     </div>
